--- a/ShoppingList.cabal
+++ b/ShoppingList.cabal
@@ -45,8 +45,11 @@ executable ShoppingList-exe
   build-depends:
       ShoppingList
     , base >=4.7 && <5
+    , wai ==3.2.4
+    , warp ==3.3.31
+    , http-types ==0.12.4
   default-language: Haskell2010
-  default-extensions: LambdaCase
+  default-extensions: LambdaCase, OverloadedStrings
 
 test-suite ShoppingList-test
   type: exitcode-stdio-1.0
