--- a/ShoppingList.cabal
+++ b/ShoppingList.cabal
@@ -36,6 +36,9 @@ executable ShoppingList-exe
   main-is: Main.hs
   other-modules:
       Paths_ShoppingList
+      Config.AppConfig
+      Config.Loader
+      Config.Resource
   autogen-modules:
       Paths_ShoppingList
   hs-source-dirs:
@@ -47,6 +50,10 @@ executable ShoppingList-exe
     , wai ==3.2.4
     , warp ==3.3.31
     , http-types ==0.12.4
+    , file-embed ==0.0.16.0
+    , yaml ==0.11.11.2
+    , bytestring ==0.11.5.3
+    , directory ==1.3.7.1
   default-language: Haskell2010
   default-extensions: LambdaCase, OverloadedStrings
 
