--- a/ShoppingList.cabal
+++ b/ShoppingList.cabal
@@ -40,6 +40,7 @@ executable ShoppingList-exe
       AppConfig.Resource
       AppConfig
       Localisation
+      WebApp
       WebServer
   autogen-modules:
       Paths_ShoppingList
@@ -56,5 +57,7 @@ executable ShoppingList-exe
     , yaml ==0.11.11.2
     , bytestring ==0.11.5.3
     , directory ==1.3.7.1
+    , lucid ==2.11.20230408
+    , text ==2.0.2
   default-language: Haskell2010
   default-extensions: LambdaCase, OverloadedStrings
