--- a/ShoppingList.cabal
+++ b/ShoppingList.cabal
@@ -38,7 +38,10 @@ executable ShoppingList-exe
       Paths_ShoppingList
       AppConfig.Loader
       AppConfig.Resource
+      Database.Initialiser
+      Database.Resource
       AppConfig
+      Database
       Localisation
       WebApp
       WebServer
@@ -59,5 +62,6 @@ executable ShoppingList-exe
     , directory ==1.3.7.1
     , lucid ==2.11.20230408
     , text ==2.0.2
+    , sqlite-simple ==0.4.19.0
   default-language: Haskell2010
   default-extensions: LambdaCase, OverloadedStrings
