--- a/ShoppingList.cabal
+++ b/ShoppingList.cabal
@@ -40,10 +40,12 @@ executable ShoppingList-exe
       AppConfig.Resource
       Database.Initialiser
       Database.Resource
-      WebApps.MainApp
+      WebApp.MainApp
+      WebApp.ModifyApp
       AppConfig
       Database
       Localisation
+      WebApp
       WebServer
   autogen-modules:
       Paths_ShoppingList
@@ -54,6 +56,7 @@ executable ShoppingList-exe
       ShoppingList
     , base >=4.7 && <5
     , wai ==3.2.4
+    , wai-util ==0.8
     , warp ==3.3.31
     , http-types ==0.12.4
     , file-embed ==0.0.16.0
@@ -63,5 +66,8 @@ executable ShoppingList-exe
     , lucid ==2.11.20230408
     , text ==2.0.2
     , sqlite-simple ==0.4.19.0
+    , containers ==0.6.7
+    , extra ==1.7.14
+    , network-uri ==2.6.4.2
   default-language: Haskell2010
   default-extensions: LambdaCase, OverloadedStrings
