--- a/ShoppingList.cabal
+++ b/ShoppingList.cabal
@@ -69,5 +69,6 @@ executable ShoppingList-exe
     , containers ==0.6.7
     , extra ==1.7.14
     , network-uri ==2.6.4.2
+    , uri-encode ==1.5.0.7
   default-language: Haskell2010
   default-extensions: LambdaCase, OverloadedStrings
