--- a/ShoppingList.cabal
+++ b/ShoppingList.cabal
@@ -20,6 +20,7 @@ source-repository head
 
 library
   exposed-modules:
+        Data.Text.TRead
   other-modules:
       Paths_ShoppingList
   autogen-modules:
@@ -29,6 +30,7 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , text == 2.0.2
   default-language: Haskell2010
   default-extensions: LambdaCase
 
