--- a/ShoppingList.cabal
+++ b/ShoppingList.cabal
@@ -43,8 +43,8 @@ executable ShoppingList-exe
       Database.Initialiser
       Database.Resource
       WebApp.AddApp
-      WebApp.EditApp
       WebApp.MainApp
+      WebApp.ManageApp
       WebApp.ModifyApp
       WebServer.Resource
       AppConfig
