--- a/ShoppingList.cabal
+++ b/ShoppingList.cabal
@@ -20,7 +20,6 @@ source-repository head
 
 library
   exposed-modules:
-      Data.Text.Extra
       Data.Text.TRead
   other-modules:
       Paths_ShoppingList
@@ -28,10 +27,10 @@ library
       Paths_ShoppingList
   hs-source-dirs:
       src
-  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -Wno-x-partial
   build-depends:
       base >=4.7 && <5
-    , text == 2.0.2
+    , text == 2.1.2
   default-language: Haskell2010
   default-extensions: LambdaCase, OverloadedStrings
 
@@ -59,22 +58,22 @@ executable ShoppingList-exe
       Paths_ShoppingList
   hs-source-dirs:
       app
-  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -Wno-x-partial -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       ShoppingList
     , base >=4.7 && <5
     , wai ==3.2.4
     , wai-util ==0.8
-    , warp ==3.3.31
+    , warp ==3.4.7
     , http-types ==0.12.4
     , file-embed ==0.0.16.0
     , yaml ==0.11.11.2
-    , bytestring ==0.11.5.3
-    , directory ==1.3.7.1
-    , lucid ==2.11.20230408
-    , text ==2.0.2
+    , bytestring ==0.12.2.0
+    , directory ==1.3.9.0
+    , lucid ==2.11.20250303
+    , text ==2.1.2
     , sqlite-simple ==0.4.19.0
-    , containers ==0.6.7
+    , containers ==0.7
     , network-uri ==2.6.4.2
     , uri-encode ==1.5.0.7
   default-language: Haskell2010
