--- a/ShoppingList.cabal
+++ b/ShoppingList.cabal
@@ -61,5 +61,7 @@ executable ShoppingList-exe
     , lucid ==2.11.20250303
     , text ==2.1.2
     , sqlite-simple ==0.4.19.0
+    , yesod ==1.6.2.1
+    , yesod-lucid ==0.1
   default-language: Haskell2010
   default-extensions: LambdaCase, OverloadedStrings
