--- a/ShoppingList.cabal
+++ b/ShoppingList.cabal
@@ -42,6 +42,8 @@ executable ShoppingList-exe
       AppConfig.Resource
       Database.Initialiser
       Database.Resource
+      Database.WebApp
+      Localisation.WebApp
       WebApp.HomeR
       AppConfig
       Database
