--- a/ShoppingList.cabal
+++ b/ShoppingList.cabal
@@ -45,6 +45,7 @@ executable ShoppingList-exe
       Database.WebApp
       Localisation.WebApp
       WebApp.HomeR
+      WebApp.StyleSheet
       AppConfig
       Database
       Item
@@ -65,5 +66,6 @@ executable ShoppingList-exe
     , text ==2.1.2
     , sqlite-simple ==0.4.19.0
     , yesod ==1.6.2.1
+    , shakespeare ==2.1.0.1
   default-language: Haskell2010
   default-extensions: LambdaCase, OverloadedStrings, QuasiQuotes
