--- a/ShoppingList.cabal
+++ b/ShoppingList.cabal
@@ -45,7 +45,7 @@ executable ShoppingList-exe
       Database.WebApp
       Localisation.WebApp
       WebApp.HomeR
-      WebApp.OrderOptionUpdateR
+      WebApp.SettingUpdateR
       WebApp.StyleSheet
       AppConfig
       Database
@@ -68,5 +68,6 @@ executable ShoppingList-exe
     , sqlite-simple ==0.4.19.0
     , yesod ==1.6.2.1
     , shakespeare ==2.1.0.1
+    , extra ==1.8
   default-language: Haskell2010
   default-extensions: LambdaCase, OverloadedStrings, QuasiQuotes
