--- a/ShoppingList.cabal
+++ b/ShoppingList.cabal
@@ -47,6 +47,7 @@ executable ShoppingList-exe
       WebApp.AddR
       WebApp.HomeR
       WebApp.ManageR
+      WebApp.ModifyR
       WebApp.SettingUpdateR
       WebApp.StyleSheet
       AppConfig
@@ -71,5 +72,6 @@ executable ShoppingList-exe
     , yesod ==1.6.2.1
     , shakespeare ==2.1.0.1
     , extra ==1.8
+    , uri-encode ==1.5.0.7
   default-language: Haskell2010
   default-extensions: LambdaCase, OverloadedStrings, QuasiQuotes
