--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -68,4 +68,6 @@
 # To generate a suitable file for HLint do:
 # $ hlint --default > .hlint.yaml
 
-ignore: {name: [Redundant <&>, Parse error]}
+- arguments: [-XQuasiQuotes]
+
+- ignore: {name: [Redundant <&>]}
